--- a/app.json
+++ b/app.json
@@ -3,16 +3,11 @@
     "scheme": "ferias",
     "description": "Ferias Libres de Chile",
     "userInterfaceStyle": "automatic",
-    "web": {
-      "bundler": "metro",
-      "favicon": "./assets/icon.png"
-    },
     "githubUrl": "https://github.com/mariofix/ferias-libres",
     "orientation": "portrait",
     "primaryColor": "#20232a",
     "platforms": [
-      "android",
-      "web"
+      "android"
     ],
     "name": "ferias-libres-app",
     "slug": "ferias-libres",
@@ -33,7 +28,7 @@
         "googleMaps": {
           "apiKey": "AIzaSyB_WRdJFyJ98bXRgJVp-Ak6JcBFQokfpQk"
         },
-        "versionCode": 1
+        "versionCode": 2
       },
       "package": "com.mariofix.feriaslibres"
     }
