--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,3 +29,5 @@ jobs:
     - run: npm test
     - name: Coveralls GitHub Action
       uses: coverallsapp/github-action@v2
+    - name: Codacy Coverage
+      run: bash <(curl -Ls https://coverage.codacy.com/get.sh)
