--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,5 +29,8 @@ jobs:
     - run: npm test
     - name: Coveralls GitHub Action
       uses: coverallsapp/github-action@v2
-    - name: Codacy Coverage
-      run: bash <(curl -Ls https://coverage.codacy.com/get.sh)
+    - name: Run codacy-coverage-reporter
+      uses: codacy/codacy-coverage-reporter-action@v1
+      with:
+        project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+        coverage-reports: "coverage/lcov.info"
