Alpha release - v1.0.2 - Version Code 1

--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "platforms": [
       "android"
     ],
-    "name": "ferias-libres-app",
+    "name": "Ferias Libres",
     "slug": "ferias-libres",
     "extra": {
       "eas": {
