--- a/package.json
+++ b/package.json
@@ -3,37 +3,27 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "test": "jest"
+    "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-config": "^0.7.1",
-    "@expo/webpack-config": "^18.1.0",
-    "@react-native-picker/picker": "2.4.8",
     "expo": "^48.0.7",
-    "expo-asset": "~8.9.1",
     "expo-constants": "~14.2.1",
-    "expo-dev-client": "~2.2.1",
-    "expo-file-system": "~15.2.2",
     "expo-linking": "~4.0.1",
-    "expo-router": "^1.2.0",
+    "expo-router": "^1.5.3",
     "expo-splash-screen": "~0.18.1",
-    "expo-system-ui": "~2.2.1",
-    "jest": "^29.2.1",
-    "jest-expo": "^48.0.2",
+    "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.10",
-    "react-native-dropdown-select-list": "^2.0.4",
-    "react-native-gesture-handler": "~2.11.0",
-    "react-native-maps": "1.7.1",
-    "react-native-reanimated": "~3.2.0",
-    "react-native-safe-area-context": "4.5.3",
+    "react-native": "0.71.3",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.19.4"
+    "react-native-web": "~0.18.7",
+    "expo-asset": "~8.9.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.5",
+    "@babel/core": "^7.19.3",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
   },
   "resolutions": {
@@ -41,25 +31,10 @@
     "metro-resolver": "^0.73.7"
   },
   "overrides": {
-    "metro": "0.76.0",
-    "metro-resolver": "0.76.0"
+    "metro": "^0.73.7",
+    "metro-resolver": "^0.73.7"
   },
-  "jest": {
-    "preset": "jest-expo",
-    "passWithNoTests": true,
-    "transformIgnorePatterns": [
-      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
-    ],
-    "collectCoverage": true,
-    "collectCoverageFrom": [
-      "**/*.{js,jsx}",
-      "!**/coverage/**",
-      "!**/node_modules/**",
-      "!**/babel.config.js",
-      "!**/jest.setup.js"
-    ]
-  },
-  "name": "ferias-libres-app",
-  "version": "1.0.2",
+  "name": "ferias-libres",
+  "version": "1.1.0",
   "private": true
 }
