--- a/app.json
+++ b/app.json
@@ -16,7 +16,12 @@
       "web"
     ],
     
-    "owner": "mariofix"
+    "owner": "mariofix",
+    "splash": {
+      "image": "./assets/splash.png",
+      "resizeMode": "contain"
+    },
+    "icon": "./assets/icon.png"
     
   }
 }
