--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "expo": "^48.0.7",
+    "expo-asset": "~8.9.1",
     "expo-constants": "~14.2.1",
+    "expo-file-system": "~15.2.2",
     "expo-linking": "~4.0.1",
     "expo-router": "^1.5.3",
     "expo-splash-screen": "~0.18.1",
@@ -15,11 +18,12 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.11",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-paper": "^5.8.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.3",
     "react-native-screens": "~3.21.0",
-    "react-native-web": "~0.19.5",
-    "expo-asset": "~8.9.1"
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.19.5"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
