--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "web": "expo start --web"
+    "android": "expo start --android"
   },
   "dependencies": {
     "axios": "^1.4.0",
