--- a/app.json
+++ b/app.json
@@ -20,10 +20,10 @@
       "resizeMode": "contain"
     },
     "icon": "./assets/icon.png",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "android": {
       "package": "com.mariofix.feriaslibres",
-      "versionCode": "2",
+      "versionCode": 3,
       "adaptiveIcon": {
         "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#FFFFFF"
