--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "expo": "^48.0.7",
-    "expo-asset": "~8.10.1",
+    "expo-asset": "~8.9.1",
     "expo-constants": "~14.2.1",
     "expo-file-system": "~15.2.2",
     "expo-linking": "~4.0.1",
@@ -15,14 +15,19 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.1",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native": "0.71.8",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.8.0",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.5.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.18.10",
+    "sentry-expo": "~6.2.0",
+    "expo-application": "~5.1.1",
+    "expo-device": "~5.2.1",
+    "expo-updates": "~0.16.4",
+    "@sentry/react-native": "4.15.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
@@ -37,6 +42,6 @@
     "metro-resolver": "^0.73.7"
   },
   "name": "ferias-libres",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "private": true
 }
