--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
     "android": "expo start --android"
   },
   "dependencies": {
+    "@sentry/react-native": "4.15.2",
+    "@shopify/flash-list": "1.4.0",
     "axios": "^1.4.0",
     "expo": "^48.0.7",
+    "expo-application": "~5.1.1",
     "expo-asset": "~8.9.1",
     "expo-constants": "~14.2.1",
+    "expo-device": "~5.2.1",
     "expo-file-system": "~15.2.2",
     "expo-linking": "~4.0.1",
     "expo-router": "^1.5.3",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
@@ -24,10 +29,8 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
     "sentry-expo": "~6.2.0",
-    "expo-application": "~5.1.1",
-    "expo-device": "~5.2.1",
-    "expo-updates": "~0.16.4",
-    "@sentry/react-native": "4.15.2"
+    "sweetalert2": "^11.7.12",
+    "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
@@ -42,6 +45,6 @@
     "metro-resolver": "^0.73.7"
   },
   "name": "ferias-libres",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "private": true
 }
