--- a/package.json
+++ b/package.json
@@ -4,45 +4,39 @@
     "android": "expo start --android"
   },
   "dependencies": {
-    "@sentry/react-native": "4.15.2",
-    "@shopify/flash-list": "1.4.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.4",
+    "@mui/icons-material": "^5.13.7",
+    "@mui/material": "^5.13.7",
+    "@pchmn/expo-material3-theme": "^1.0.1",
+    "@sentry/react-native": "5.5.0",
+    "@shopify/flash-list": "1.4.3",
     "axios": "^1.4.0",
-    "expo": "^48.0.7",
-    "expo-application": "~5.1.1",
-    "expo-asset": "~8.9.1",
-    "expo-constants": "~14.2.1",
-    "expo-device": "~5.2.1",
-    "expo-file-system": "~15.2.2",
-    "expo-linking": "~4.0.1",
-    "expo-router": "^1.5.3",
-    "expo-splash-screen": "~0.18.1",
-    "expo-status-bar": "~1.4.4",
-    "expo-updates": "~0.16.4",
+    "expo": "^49.0.2",
+    "expo-application": "~5.3.0",
+    "expo-asset": "^8.10.1",
+    "expo-constants": "~14.4.2",
+    "expo-device": "~5.4.0",
+    "expo-file-system": "~15.4.2",
+    "expo-linking": "^5.0.2",
+    "expo-router": "2.0.0",
+    "expo-splash-screen": "~0.20.4",
+    "expo-status-bar": "~1.6.0",
+    "expo-updates": "^0.18.9",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.71.8",
-    "react-native-gesture-handler": "~2.9.0",
+    "react-native": "0.72.1",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-paper": "^5.8.0",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.10",
-    "sentry-expo": "~6.2.0",
-    "sweetalert2": "^11.7.12",
-    "sweetalert2-react-content": "^5.0.7"
+    "sentry-expo": "~7.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
-  },
-  "resolutions": {
-    "metro": "^0.73.7",
-    "metro-resolver": "^0.73.7"
-  },
-  "overrides": {
-    "metro": "^0.73.7",
-    "metro-resolver": "^0.73.7"
   },
   "name": "ferias-libres",
   "version": "1.1.4",
