--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@fontsource/roboto": "^5.0.4",
     "@mui/icons-material": "^5.13.7",
     "@mui/material": "^5.13.7",
-    "@pchmn/expo-material3-theme": "^1.0.1",
     "@sentry/react-native": "5.5.0",
     "@shopify/flash-list": "1.4.3",
     "axios": "^1.4.0",
@@ -23,7 +22,7 @@
     "expo-router": "2.0.0",
     "expo-splash-screen": "~0.20.4",
     "expo-status-bar": "~1.6.0",
-    "expo-updates": "^0.18.9",
+    "expo-updates": "~0.18.9",
     "react": "18.2.0",
     "react-native": "0.72.1",
     "react-native-gesture-handler": "~2.12.0",
@@ -39,6 +38,6 @@
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
   },
   "name": "ferias-libres",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "private": true
 }
