--- a/app.json
+++ b/app.json
@@ -4,10 +4,9 @@
     "name": "Ferias Libres",
     "slug": "ferias-libres",
     "description": "Ferias Libres de Chile",
-    "userInterfaceStyle": "light",
+    "userInterfaceStyle": "automatic",
     "githubUrl": "https://github.com/mariofix/ferias-libres",
     "orientation": "portrait",
-    "primaryColor": "#f9f7e8",
     "assetBundlePatterns": [
       "**/*"
     ],
@@ -17,13 +16,14 @@
     "owner": "mariofix",
     "splash": {
       "image": "./assets/splash.png",
-      "resizeMode": "contain"
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
     },
     "icon": "./assets/icon.png",
-    "version": "1.1.5",
+    "version": "1.2.0",
     "android": {
       "package": "com.mariofix.feriaslibres",
-      "versionCode": 8,
+      "versionCode": 120,
       "adaptiveIcon": {
         "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#FFFFFF"
