--- a/package.json
+++ b/package.json
@@ -1,43 +1,34 @@
 {
+  "name": "ferias-libres",
+  "version": "1.2.0",
+  "private": true,
+  "scheme": "ferias",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@fontsource/roboto": "^5.0.4",
-    "@mui/icons-material": "^5.13.7",
-    "@mui/material": "^5.13.7",
-    "@sentry/react-native": "5.5.0",
-    "@shopify/flash-list": "1.4.3",
     "axios": "^1.4.0",
-    "expo": "^49.0.2",
-    "expo-application": "~5.3.0",
-    "expo-asset": "^8.10.1",
+    "expo": "~49.0.2",
     "expo-constants": "~14.4.2",
-    "expo-device": "~5.4.0",
-    "expo-file-system": "~15.4.2",
-    "expo-linking": "^5.0.2",
+    "expo-linking": "~5.0.2",
     "expo-router": "2.0.0",
-    "expo-splash-screen": "~0.20.4",
     "expo-status-bar": "~1.6.0",
-    "expo-updates": "~0.18.9",
+    "expo-system-ui": "~2.4.0",
     "react": "18.2.0",
     "react-native": "0.72.1",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-paper": "^5.8.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-vector-icons": "^9.2.0",
-    "sentry-expo": "~7.0.0"
+    "sentry-expo": "~7.0.0",
+    "expo-application": "~5.3.0",
+    "expo-device": "~5.4.0",
+    "expo-updates": "~0.18.9",
+    "@sentry/react-native": "5.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
-  },
-  "name": "ferias-libres",
-  "version": "1.1.5",
-  "private": true
+    "@babel/core": "^7.20.0"
+  }
 }
