--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ferias-libres",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "private": true,
   "scheme": "ferias",
   "main": "expo-router/entry",
@@ -30,7 +30,8 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "expo-insights": "~0.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
