--- a/.github/workflows/new_preview.yml
+++ b/.github/workflows/new_preview.yml
@@ -19,7 +19,7 @@ jobs:
         uses: expo/expo-github-action@v8
         with:
           eas-version: latest
-          token: ${{ secrets.EXPO_TOKEN }}
+          token: ${{ secrets.EXPO_BOT_TOKEN }}
 
       - name: 📦 Install dependencies
         run: npm install
