--- a/app.json
+++ b/app.json
@@ -20,10 +20,10 @@
       "backgroundColor": "#ffffff"
     },
     "icon": "./assets/icon.png",
-    "version": "1.3.1",
+    "version": "1.3.2",
     "android": {
       "package": "com.mariofix.feriaslibres",
-      "versionCode": 131,
+      "versionCode": 132,
       "adaptiveIcon": {
         "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#FFFFFF"
@@ -35,11 +35,23 @@
       }
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "sentry-expo"
     ],
     "experiments": {
       "tsconfigPaths": true,
       "typedRoutes": true
     }
+  },
+  "hooks": {
+    "postPublish": [
+      {
+        "file": "sentry-expo/upload-sourcemaps",
+        "config": {
+          "organization": "ferias-libres",
+          "project": "android-app"
+        }
+      }
+    ]
   }
 }
