--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ferias-libres",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "private": true,
   "scheme": "ferias",
   "main": "expo-router/entry",
@@ -31,7 +31,13 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
-    "expo-insights": "~0.2.0"
+    "expo-insights": "~0.2.0",
+    "sentry-expo": "~7.0.0",
+    "expo-application": "~5.3.0",
+    "expo-constants": "~14.4.2",
+    "expo-device": "~5.4.0",
+    "expo-updates": "~0.18.10",
+    "@sentry/react-native": "5.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
